# tree-sitter-witcherscript

./: .gitattributes  .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py
.github/workflows/: build-and-test.yml
bindings/c/: tree-sitter-witcherscript.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_witcherscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWitcherscript/: witcherscript.h
bindings/swift/TreeSitterWitcherscriptTests/: TreeSitterWitcherscriptTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: annotations.txt  classes.txt  comments.txt  enums.txt  expressions.txt  function_statements.txt  literals.txt  structs.txt
