[package]
name = "tree-sitter-witcherscript"
description = "WitcherScript grammar for the tree-sitter parsing library"
version = "0.13.0-experimental"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "witcherscript"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-witcherscript"
edition = "2018"
license = "MIT"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0.87"
